# container-orchestration-service

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
_deviations/: 0001-v1-scope.md
src/cos/cli/: main.py
src/cos/core/: backend.py  errors.py  labels.py  spec.py
src/cos/mcp_server/: server.py
tests/: test_backend_live.py  test_mcp_server_live.py  test_spec.py
